force-app/main/default/objects/NC_Graduated_Commission__c/NC_Graduated_Commission__c.object-meta.xml
<CustomObject>
    <label>Graduated Commission</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Graduated Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graduated Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>