force-app/main/default/objects/NC_Graduated_Commission__c/fields/GC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GC_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>