force-app/main/default/objects/NC_Graduated_Commission__c/fields/GC_Goal__c.field-meta.xml
<CustomField>
    <fullName>GC_Goal__c</fullName>
    <label>Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>