force-app/main/default/objects/NC_Graduated_Commission__c/fields/GD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GD_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>