force-app/main/default/objects/NC_Graduated_Commission__c/validationRules/StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>GC_End_Date__c &lt;  GD_Start_Date__c</errorConditionFormula>
    <errorDisplayField>GC_End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after the Start Date</errorMessage>
</ValidationRule>