force-app/main/default/objects/NC_Graduated_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GD_Start_Date__c</columns>
    <columns>GC_End_Date__c</columns>
    <columns>GC_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>